--- a/player/build.gradle
+++ b/player/build.gradle
@@ -18,7 +18,7 @@ android {
 
         externalNativeBuild {
             cmake {
-                cppFlags "-fexceptions", "-frtti"
+                cppFlags "-fexceptions", "-frtti", "-std=c++11"
                 abiFilters 'armeabi-v7a'
             }
         }
@@ -50,7 +50,6 @@ android {
 }
 
 dependencies {
-
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
