--- a/player/build.gradle
+++ b/player/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        minSdkVersion 18
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -18,6 +18,7 @@ android {
 
         externalNativeBuild {
             cmake {
+                arguments "-DANDROID_STL=c++_shared"
                 cppFlags "-fexceptions", "-frtti", "-std=c++11"
                 abiFilters 'armeabi-v7a'
             }
@@ -25,6 +26,10 @@ android {
 
         ndk {
             abiFilters "armeabi-v7a"
+        }
+
+        buildFeatures {
+            prefab true
         }
     }
 
@@ -57,4 +62,5 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'com.google.oboe:oboe:1.6.0'
 }
